--- a/1/checkout/ef17275060711a3ff2b9fcd1bfe4ee4d.html
+++ b/1/checkout/ef17275060711a3ff2b9fcd1bfe4ee4d.html
@@ -1642,198 +1642,7 @@
           </div>
         </div>
       </footer>
-      <div
-        id="paymentModal"
-        data-modal
-        class="fixed inset-0 z-50 hidden overflow-y-auto overflow-x-hidden bg-[#00000033] outline-none"
-      >
-        <div
-          class="pointer-events-none mx-auto flex min-h-screen w-full max-w-[896px] flex-col items-center justify-center md:px-4 md:py-10"
-        >
-          <div
-            class="pointer-events-auto relative w-full bg-white md:rounded-xl"
-          >
-            <!-- Modal header -->
-            <div class="flex gap-2.5 p-4 md:justify-end">
-              <div class="flex-1 text-center text-240 font-bold md:hidden">
-                Select payment method
-              </div>
-              <button
-                class="shrink-0 opacity-100 outline-none transition-opacity md:hover:opacity-70"
-                data-modal-target="#paymentModal"
-                data-modal-close
-              >
-                <svg
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g clip-path="url(#clip0_226_15317)">
-                    <g clip-path="url(#clip1_226_15317)">
-                      <path
-                        d="M12 2C6.47 2 2 6.47 2 12C2 17.53 6.47 22 12 22C17.53 22 22 17.53 22 12C22 6.47 17.53 2 12 2ZM16.3 16.3C15.91 16.69 15.28 16.69 14.89 16.3L12 13.41L9.11 16.3C8.72 16.69 8.09 16.69 7.7 16.3C7.31 15.91 7.31 15.28 7.7 14.89L10.59 12L7.7 9.11C7.31 8.72 7.31 8.09 7.7 7.7C8.09 7.31 8.72 7.31 9.11 7.7L12 10.59L14.89 7.7C15.28 7.31 15.91 7.31 16.3 7.7C16.69 8.09 16.69 8.72 16.3 9.11L13.41 12L16.3 14.89C16.68 15.27 16.68 15.91 16.3 16.3Z"
-                        fill="#161616"
-                      />
-                    </g>
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_226_15317">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                    <clipPath id="clip1_226_15317">
-                      <rect width="24" height="24" fill="white" />
-                    </clipPath>
-                  </defs>
-                </svg>
-              </button>
-            </div>
-            <!-- Modal header -->
-
-            <!-- Content -->
-            <div class="px-4 pb-20 md:px-10">
-              <div class="mb-8 hidden text-center text-320 font-bold md:block">
-                Select payment method
-              </div>
-
-              <!-- Select payment method mobile -->
-              <div class="mb-6 flex gap-4 md:hidden">
-                <div
-                  class="payment-method-button selected group flex flex-1 cursor-pointer flex-col items-center justify-center rounded-lg border-2 border-ncc-grey-300 bg-white p-4 [&.selected]:border-ncc-black [&.selected]:bg-ncc-primary-green-500"
-                  data-method="card"
-                >
-                  <div class="mb-2.5 font-bold">Credit Card</div>
-                  <img
-                    src="../../images/rebrand/funnels-testing/pages/checkout/credit-cards.png"
-                    width="125"
-                    height="12"
-                    alt="Payment method"
-                  />
-                </div>
-                <div
-                  class="payment-method-button group flex flex-1 cursor-pointer flex-col items-center justify-center rounded-lg border-2 border-ncc-grey-300 bg-white p-4 [&.selected]:border-ncc-black [&.selected]:bg-ncc-primary-green-500"
-                  data-method="paypal"
-                >
-                  <img
-                    src="../../images/rebrand/funnels-testing/pages/checkout/paypal.png"
-                    width="76"
-                    height="24"
-                    alt="Payment method"
-                  />
-                </div>
-              </div>
-              <!-- Select payment method mobile -->
-
-              <div class="flex flex-col gap-4 md:flex-row md:gap-10">
-                <!-- Summary side -->
-                <div class="flex-1">
-                  <div
-                    class="mb-4 border-b border-ncc-grey-400 pb-4 md:mb-6 md:pb-6"
-                  >
-                    <div class="mb-4 text-200 font-bold md:mb-6">
-                      Your Order Summary
-                    </div>
-                    <div class="flex flex-col gap-4">
-                      <div
-                        class="modal-plan-row flex items-center justify-between gap-4"
-                      >
-                        <div class="modal-duration text-ncc-grey-100">
-                          6-month plan
-                        </div>
-                        <div class="modal-old-price text-ncc-grey-100">
-                          $134.00
-                        </div>
-                      </div>
-                      <div
-                        class="modal-vat-row flex items-center justify-between gap-4"
-                      >
-                        <div class="text-ncc-grey-100">VAT amount</div>
-                        <div class="modal-vat-amount text-ncc-grey-100"></div>
-                      </div>
-                      <div
-                        class="modal-discount-row flex items-center justify-between gap-4"
-                      >
-                        <div class="text-ncc-grey-100">
-                          Discount
-                          <span class="modal-discount-percentage">50%</span>
-                        </div>
-                        <div class="modal-discount-amount text-ncc-accent-red">
-                          -$67.00
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div
-                    class="border-b border-ncc-grey-400 pb-4 md:border-none md:pb-0"
-                  >
-                    <div
-                      class="modal-total-row flex items-center justify-between gap-4"
-                    >
-                      <div class="text-200 font-bold">Total</div>
-                      <div class="modal-total-amount text-200 font-bold">
-                        <span>$67.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Summary side -->
-                <!-- Divider -->
-                <div
-                  class="hidden max-w-[1px] flex-1 bg-ncc-grey-400 md:block"
-                ></div>
-                <!-- Divider -->
-                <!-- Payment methods -->
-                <div class="flex flex-1 flex-col gap-6">
-                  <div
-                    class="payment-method-container hidden md:block [&.selected]:block"
-                    data-method="paypal"
-                  >
-                    <div id="pp-placeholder"></div>
-                    <div
-                      class="mt-2.5 text-center text-120 uppercase text-ncc-grey-100"
-                    >
-                      THE SAFER, EASIER WAY TO PAY
-                    </div>
-                  </div>
-                  <div
-                    class="selected payment-method-container hidden md:block [&.selected]:block"
-                    data-method="card"
-                  >
-                    <div class="flex flex-col md:flex-col-reverse">
-                      <div id="cc-placeholder"></div>
-                      <div>
-                        <div class="relative mb-2.5 hidden md:block">
-                          <div
-                            class="relative z-20 text-center text-140 text-ncc-grey-100"
-                          >
-                            <span class="bg-white px-2.5">
-                              or pay with a card
-                            </span>
-                          </div>
-                          <div
-                            class="absolute top-1/2 z-10 h-[1px] w-full -translate-y-1/2 bg-ncc-grey-400"
-                          ></div>
-                        </div>
-                        <img
-                          src="../../images/rebrand/funnels-testing/pages/checkout/payment-methods-modal.png"
-                          width="320"
-                          height="32"
-                          alt="Payment method"
-                          class="mx-auto mt-6 md:mt-0"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Payment methods -->
-              </div>
-            </div>
-            <!-- Content -->
-          </div>
-        </div>
-      </div>
+      
       <!-- START: Modal privacy policy -->
       <div
         id="privacyPolicyModal"
@@ -4263,7 +4072,7 @@
       );
 
       function handleSubscriptionSubmit() {
-        const subscription = getSelectedSubscription();
+        // const subscription = getSelectedSubscription();
         const data = subscription.dataset;
 
         if (!isPrivacyCheckboxChecked()) {
@@ -4273,12 +4082,14 @@
           return;
         }
 
-        selectProductCheckout(data.key, data.description, data.price, data);
+        
 
-        openModal(paymentModal);
-        updatePaymentModal();
+        // selectProductCheckout(data.key, data.description, data.price, data);
 
-        triggerCheckoutStartedEvent();
+        // openModal(paymentModal);
+        // updatePaymentModal();
+
+        // triggerCheckoutStartedEvent();
       }
 
       // Update dynamic fields by product
