update contact information and restructure contact section

--- a/contacts.html
+++ b/contacts.html
@@ -129,43 +129,50 @@
 
     <div class="container">
       <div class="b-contacts">
-        <div class="b-contacts-contacts">
-          <h1 style="font-size: 30px">Contact us</h1>
-          <div class="text-wrapper">
-            <div class="col-6" style="padding: 0">
-              <strong>Company</strong><br />
-              Keto Diets UAB<br />
-              <strong>Company code</strong><br />
-              303157579<br />
-              <strong>Address of registration</strong><br />
-              Didžioji g. 18, Vilnius<br />
-              Lithuania<br />
-              Europe<br />
-
-              <strong>Need support?</strong><br />
-              Contact us:
-              <a
-                href="cdn-cgi/l/email-protection.html#caa2afa6a6a58aa4a5a9abb8a8b9a9a2aba6a6afa4adafe4a9a5a7"
-                ><span
-                  class="__cf_email__"
-                  data-cfemail="4c24292020230c22232f2d3e2e3f2f242d202029222b29622f2321"
-                  >[email&#160;protected]</span
-                ></a
-              ><br />
-              <strong>Address</strong><br />
-              Aludarių g. 3, Vilnius<br />
-              Lithuania<br />
-              Europe<br />
-              <strong> Email address </strong><br />
-              <a
-                href="cdn-cgi/l/email-protection.html#cfa7aaa3a3a08fa1a0acaebdadbcaca7aea3a3aaa1a8aae1aca0a2"
-                ><span
-                  class="__cf_email__"
-                  data-cfemail="c8a0ada4a4a788a6a7aba9baaabbaba0a9a4a4ada6afade6aba7a5"
-                  >[email&#160;protected]</span
-                ></a
-              ><br />
+        <div class="b-contacts">
+          <h2 class="e-title">Contact us</h2>
+          <div class="b-contacts-contacts">
+            <div class="b-contacts-item">
+              <p>Company<span>Pagina Atual LTDA</span></p>
+              <p>Company code<span>44.791.219/0001-21</span></p>
+              <p>
+                Address of registration<span
+                  >Rua dos Guajajaras, 293 - CentroBelo Horizonte - MG,
+                  30180-101, Brasil</span
+                >
+              </p>
             </div>
+            <div class="b-contacts-item">
+              <p>
+                Address<span
+                  >Rua dos Guajajaras, 293 - CentroBelo Horizonte - MG,
+                  30180-101, Brasil</span
+                >
+              </p>
+              <p>Phone<span>+5537991323056</span></p>
+              <p>
+                Email<span
+                  ><a href="mailto:hello@nocarbschallenge.co"
+                    >hello@nocarbschallenge.co
+                  </a></span
+                >
+              </p>
+              <p>
+                For media inquiries &amp; public relations please contact:<span
+                  ><a href="mailto:hello@nocarbschallenge.co"
+                    >hello@nocarbschallenge.co
+                  </a></span
+                >
+              </p>
+            </div>
+          </div>
+          <div class="b-contacts-item m-diff">
+            <p>
+              Subscriptions and support provider for US customers<span
+                >Pagina Atual LTDA</span
+              >
+            </p>
+            <p>Company code<span>44.791.219/0001-21 </span></p>
           </div>
         </div>
       </div>
